Adding parser to the main file and changing css

--- a/template.html
+++ b/template.html
@@ -32,14 +32,21 @@
                 </div>
             </div>
         </div>
-        <div class="block-center">
-            <div class="while-loop-block-rhombus">
-                <p>loop Conditional</p>
+        <div class="condition_loops_cover_div">
+            <div class="block-center">
+                <div class="if-conditional-block-rhombus">
+                    <p>loop</p>
+                </div>
             </div>
-        </div>
-        <div class="block-center">
-            <div class="if-conditional-block-triangle">
-                <p>some information text goes here</p>
+            <div class="block-center">
+                <div class="if-conditional-block-rhombus-inverted">
+                    <p>Conditional</p>
+                </div>
+            </div>
+            <div class="block-center">
+                <div class="if-conditional-block-triangle">
+                    <p>some information text goes here</p>
+                </div>
             </div>
         </div>
         </div>
