--- a/template.html
+++ b/template.html
@@ -11,42 +11,11 @@
 </head>
 <body class="body-bg-dark">
     <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container-fluid" id="navbar">
-            <div class="navbar-nav me-auto mb-2 mb-lg-0">
+        <div class="container-fluid">
+            <div class="navbar-nav me-auto mb-2 mb-lg-0" id="test">
                 <div class="d-flex justify-content-between">
-                    {% for file in nav_dir_list %}
-                        <a class="nav-link other-files-name" href="/{{ file }}">{{ file }}</a>
-                    {% endfor %}
-                    {% for file in nav_file_list %}
-                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
-                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
-                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
-                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
-                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
-                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
-                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
-                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
-                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
-                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
-                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
-                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
-                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
-                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
-                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
-                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
-                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
-                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
-                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
-                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
-                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
-                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
-                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
-                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
-                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
-                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
-                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
-                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
-                    {% endfor %}
+                    <a class="nav-link other-files-name">file 1</a>
+                    <a class="nav-link other-files-name">file 3</a>
                 </div>
             </div>
         </div>
