--- a/template.html
+++ b/template.html
@@ -10,46 +10,52 @@
     <link rel="stylesheet" href="/template.css">
 </head>
 <body class="body-bg-dark">
-    <div class="class-block">
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <div class="container-fluid">
-                <div class="navbar-nav me-auto mb-2 mb-lg-0" id="test">
-                    <a class="nav-link current-open-file" href="#">Current file name</a>
-                    <div class="d-flex justify-content-between">
-                        {% for file in files_list %}
-                        <a href="{{ file }}">{{ file }}</a>
-                        {% endfor %}
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container-fluid">
+            <div class="navbar-nav me-auto mb-2 mb-lg-0" id="test">
+                <div class="d-flex justify-content-between">
+                    {% for file in files_list %}
+                        <a class="nav-link other-files-name" href="{{ file }}">{{ file }}</a>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </nav>
+    <div class="container-fluid row">
+    <div class="col-3 side-navigator">
+        <div class="col-3 side-bar-main-body">
+            Name of the current file
+        </div>
+    </div>
+        <div class="class-block col-9">
+            <div class="container">
+                <div class="d-flex flex-wrap">
+                    <div>
+                        <div class="d-inline-flex one-variable-block">
+                            <p class="variable-text">int x = 5</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </nav>
-        <div class="container">
-            <div class="d-flex flex-wrap">
-                <div>
-                    <div class="d-inline-flex one-variable-block">
-                        <p class="variable-text">int x = 5</p>
+            <div class="condition_loops_cover_div">
+                <div class="block-center">
+                    <div class="if-conditional-block-rhombus">
+                        <p>loop</p>
+                    </div>
+                </div>
+                <div class="block-center">
+                    <div class="if-conditional-block-rhombus-inverted">
+                        <p>Conditional</p>
+                    </div>
+                </div>
+                <div class="block-center">
+                    <div class="if-conditional-block-triangle">
+                        <p>some information text goes here</p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="condition_loops_cover_div">
-            <div class="block-center">
-                <div class="if-conditional-block-rhombus">
-                    <p>loop</p>
-                </div>
-            </div>
-            <div class="block-center">
-                <div class="if-conditional-block-rhombus-inverted">
-                    <p>Conditional</p>
-                </div>
-            </div>
-            <div class="block-center">
-                <div class="if-conditional-block-triangle">
-                    <p>some information text goes here</p>
-                </div>
-            </div>
-        </div>
-        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"crossorigin="anonymous"></script>
     <script>
         let rect = document.getElementById("").getBoundingClientRect();
