File managerment Partially done

--- a/template.html
+++ b/template.html
@@ -14,7 +14,7 @@
         <div class="container-fluid">
             <div class="navbar-nav me-auto mb-2 mb-lg-0" id="test">
                 <div class="d-flex justify-content-between">
-                    <a class="nav-link other-files-name">file 1</a>
+                    <a class="nav-link other-files-name" href="#">file 1</a>
                     <a class="nav-link other-files-name">file 3</a>
                 </div>
             </div>
