Use jinja template engine for creating html

--- a/template.html
+++ b/template.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="template.css">
+    <link rel="stylesheet" href="/template.css">
 </head>
 <body class="body-bg-dark">
     <div class="class-block">
@@ -16,8 +16,9 @@
                 <div class="navbar-nav me-auto mb-2 mb-lg-0" id="test">
                     <a class="nav-link current-open-file" href="#">Current file name</a>
                     <div class="d-flex justify-content-between">
-                        <a class="nav-link other-files-name">file 1</a>
-                        <a class="nav-link other-files-name">file 3</a>
+                        {% for file in files_list %}
+                        <a href="{{ file }}">{{ file }}</a>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
@@ -43,5 +44,9 @@
         </div>
         </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"crossorigin="anonymous"></script>
+    <script>
+        let rect = document.getElementById("").getBoundingClientRect();
+        rect.width; rect.height;
+    </script>
 </body>
 </html>
