--- a/template.html
+++ b/template.html
@@ -11,13 +11,40 @@
 </head>
 <body class="body-bg-dark">
     <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container-fluid">
-            <div class="navbar-nav me-auto mb-2 mb-lg-0" id="test">
+        <div class="container-fluid" id="navbar">
+            <div class="navbar-nav me-auto mb-2 mb-lg-0">
                 <div class="d-flex justify-content-between">
                     {% for file in nav_dir_list %}
                         <a class="nav-link other-files-name" href="/{{ file }}">{{ file }}</a>
                     {% endfor %}
                     {% for file in nav_file_list %}
+                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
+                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
+                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
+                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
+                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
+                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
+                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
+                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
+                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
+                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
+                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
+                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
+                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
+                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
+                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
+                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
+                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
+                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
+                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
+                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
+                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
+                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
+                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
+                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
+                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
+                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
+                        <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
                         <a class="nav-link other-files-name" href="/{{ file }}.html">{{ file }}.java</a>
                     {% endfor %}
                 </div>
@@ -52,7 +79,7 @@
                         <p>Conditional</p>
                     </div>
                 </div>
-                <div class="block-center">
+                <div class="block-center" style="margin-top: 25px;">
                     <div class="if-conditional-block-triangle">
                         <p>some information text goes here</p>
                     </div>
@@ -73,8 +100,22 @@
     {% endif %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"crossorigin="anonymous"></script>
     <script>
-        let rect = document.getElementById("").getBoundingClientRect();
-        rect.width; rect.height;
+        //let rect = document.getElementById("").getBoundingClientRect();
+        //rect.width; rect.height;
+
+        function scrollHorizontally(e) {
+            e = window.event || e;
+            e.preventDefault();
+            var delta = Math.max(-1, Math.min(1, (e.wheelDelta || e.detail)));
+            var scrollSpeed = 25;
+            e.currentTarget.scrollLeft -= (delta * scrollSpeed);
+            //e.srcElement.scrollLeft -= (delta * scrollSpeed);
+        }
+
+        // IE9, Chrome, Safari, Opera
+        document.getElementById("navbar").addEventListener("mousewheel", scrollHorizontally, false);
+        // Firefox
+        //document.getElementById("navbar").addEventListener("DOMMouseScroll", scrollHorizontally, false);
     </script>
 </body>
 </html>
